[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
]
